--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <i class="fab fa-cc-visa" ></i>
         </a>
 
-        <p class="ccname">Hamza Tekin</p>
+        <p class="ccname">John Doe</p>
         <p class="ccnum">3011 - 5145 - 3566 - 3012</p>
     </div>
     
